--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8088
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/hospital
+    url: jdbc:mysql://localhost:3306/hospital?useSSL=false
     driver-class-name: com.mysql.jdbc.Driver
     username: njt123
     password: 123456
