--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/hospital?useSSL=false
     driver-class-name: com.mysql.jdbc.Driver
-    username: njt123
+    username: root
     password: 123456
     type: com.alibaba.druid.pool.DruidDataSource
   freemarker:
