--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,16 +2,16 @@ server:
   port: 8088
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/hospital?useSSL=false
+    url: jdbc:mysql://localhost:33061/hospital?useSSL=false
     driver-class-name: com.mysql.jdbc.Driver
     username: root
-    password: 123456
+    password: root
     type: com.alibaba.druid.pool.DruidDataSource
   freemarker:
     cache: false
     charset: UTF-8
     content-type: text/html
-    suffix: .flt
+    suffix: .ftl
     check-template-location: true
     template-loader-path: classpath:/templates
     expose-request-attributes: true
